<resources>
    <string name="app_name">Plantö</string>
    <!-- First Intro -->
    <string name="txt_first_greeting">안녕하세요!\n식물과 함께하는\n즐거운 삶,\n<b>Plantö에 오신 것을\n환영합니다!</b></string>
    <string name="button_first_confirm">다음</string>

    <!-- Second Intro -->
    <string name="txt_second_greeting">저는 앞으로\n당신의 식물을 관리 할\n<b>토오</b>라고 해요!\n만나서 반갑습니다:)</string>
    <string name="button_second_confirm">만나서 반가워!</string>

    <!-- Third Intro -->
    <string name="txt_third_greeting1">Plantö에 오신 걸 보니,\n<b>식물을 키우고 계신가봐요!</b></string>
    <string name="txt_third_greeting2">저한테 그 친구,\n보여주실 수 있으신가요?\n<b>제가 누군지 맞춰볼게요!</b></string>
    <string name="button_third_confirm">안될 건 없지!</string>
    <string name="button_third_cancel">지금은 별로</string>
    <string name="to_oh_surprised">to_oh_surprised</string>
    <string name="to_oh_greetings">to_oh_greetings</string>

    <!-- Join -->
    <string name="email">이메일</string>
    <string name="email_hint">planto@planto.com</string>
    <string name="nickname">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="join">가입하기</string>
    <string name="login">로그인</string>
    <string name="join_button">회원 가입</string>
    <string name="auto_login">자동 로그인</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>

    <!-- Plant Search -->
    <string name="txt_plant_search_greeting1">당신의 친구를 Plantö에 등록하시려구요?</string>
    <string name="txt_plant_search_greeting2">그 친구가 어떤 친구인지,\n알려주실 수 있으신가요?</string>
    <string name="txt_plant_search_greeting3"><b>내 친구</b>는...</string>
    <string name="txt_get_plant_variety">품종을 입력해 주세요! (예 : 스투키)</string>
    <string name="button_plant_search_confirm">(이)에요!</string>
    <string name="button_plant_search_cancel">안알랴줌</string>

    <!-- Plant Variety Confirm -->
    <string name="txt_plant_confirm">음, <b>검색된 식물 이름</b>와(과)\n함께 하고 계시군요!</string><!-- todo : 검색된 식물품종 기입 -->
    <string name="button_plant_confirm_confirm">맞아!</string>
    <string name="button_plant_confirm_cancel">그 식물 아니야 다시 찾을래</string>

    <!-- Select Method Of Getting Plant Picture -->
    <string name="txt_selection_method_of_getting_plant_picture">사용자 지정 식물이름(이)의\n모습을 보여주시겠어요?</string><!-- todo : 사용자가 지정한 식물이름 기입 -->
    <string name="button_get_picture_from_camera">사진 찍어서 보여줄게!</string><!-- todo : 카메라 아이콘 추가 -->
    <string name="button_get_picture_from_album">찍어둔 사진을 보여줄게!</string><!-- todo : 앨범 아이콘 추가 -->
    <string name="button_get_picture_cancel">사용자 지정 식물이름(이)가 낯을 가려서 다음에...</string>

    <!-- Plant Naming -->
    <string name="txt_plant_naming1">식물친구\n<b>이름이 뭐예요?</b></string>
    <string name="txt_plant_naming2">내 식물 이름은</string>
    <string name="txt_get_plant_name">식물의 이름(별명)을 입력하세요!</string>
    <string name="txt_plant_naming3">야!</string>
    <string name="button_plant_name_confirm">멋진 이름이지?</string>
    <string name="button_plant_name_cancel">그냥 다음에 지을래</string>

    <!-- MyPlant Confirm -->
    <string name="txt_my_plant_confirm1">등록할 친구가,</string>
    <string name="txt_my_plant_variety">검색된 식물 이름</string><!-- todo : 검색된 식물품종 기입 -->
    <string name="txt_my_plant_confirm2">품종의</string>
    <string name="txt_my_plant_name">사용자 지정 식물이름</string><!-- todo : 사용자가 지정한 식물이름 기입 -->
    <string name="txt_my_plant_confirm3">맞나요?</string>
    <string name="txt_my_plant_change_picture">사진을 바꾸려면 터치하세요</string>
    <string name="button_my_plant_confirm_confirm">맞아!</string>
    <string name="button_my_plant_confirm_cancel">마음이 바꼈어, 등록 안할래</string>

    <!-- Main : MyPlant List -->
    <string name="txt_loaded_my_plant_name">반려식물1</string><!-- todo : 사용자가 지정한 식물이름 기입 -->
    <string name="txt_loaded_my_plant_description">최근 급수일 : 1일 전\n급수 주기 : 흙을 만졌을 때 마른 느낌이 나면 주세요</string>

</resources>