<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myplant.SearchPlantVarietyActivity">
    <ImageView
        android:id="@+id/searchPlantVarietyImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/to_oh_surprised"
        android:translationX="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/to_oh_surprised" />

    <TextView
        android:id="@+id/textViewSearchPlantVariety1"
        style="@style/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_plant_search_greeting1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSearchPlantVariety2"
        style="@style/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/txt_plant_search_greeting2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchPlantVariety1" />

    <TextView
        android:id="@+id/textViewSearchPlantVariety3"
        style="@style/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/txt_plant_search_greeting3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchPlantVariety2" />

    <EditText
        android:id="@+id/editTextPlantVariety"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txt_get_plant_variety"
        android:textColor="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchPlantVariety3" />

    <Button
        android:id="@+id/buttonSearchPlantVarietyConfirm"
        android:background="@drawable/intro_confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_plant_search_confirm"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearchPlantVarietyCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSearchPlantVarietyCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:text="@string/button_plant_search_cancel"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>