<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myplant.SetPlantNameActivity">

    <TextView
        android:id="@+id/textViewGetPlantName1"
        style="@style/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_plant_naming1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGetPlantName2"
        style="@style/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:text="@string/txt_plant_naming2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGetPlantName1" />

    <EditText
        android:id="@+id/editTextPlantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txt_get_plant_name"
        android:textColor="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGetPlantName2" />

    <TextView
        android:id="@+id/textViewSearchPlantName3"
        style="@style/IntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_plant_naming3"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPlantName"
        app:layout_constraintStart_toEndOf="@+id/editTextPlantName"
        app:layout_constraintTop_toTopOf="@+id/editTextPlantName" />

    <Button
        android:id="@+id/buttonGetPlantNameConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/intro_confirm_button"
        android:text="@string/button_plant_name_confirm"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetPlantNameCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGetPlantNameCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:text="@string/button_plant_name_cancel"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>